--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     <a class="brand" href="#">
       <div class="logo" aria-hidden="true">DB</div>
       <div>
-        <h1>Dashboards</h1>
-        <small>Escolha um ambiente</small>
+        <h1>DASHBOARDS - OPERAÇÕES DE CELULOSE</h1>
+        <small>DEEP LOGÍSTICA</small>
       </div>
     </a>
   </header>
@@ -168,13 +168,13 @@
     <section class="carousel" aria-label="Menu principal dos tipos de negócio">
       <div class="track" id="track">
         <!-- 1. Operações de Celulose -->
-        <article class="card" tabindex="0" data-link="/celulose.html">
-          <div class="card__bg" style="background-image:url('https://images.unsplash.com/photo-1519336555923-59661f41bb86?q=80&w=1600&auto=format&fit=crop');"></div>
+        <article class="card" tabindex="0" data-link="/fabricaLinha2.html">
+          <div class="card__bg" style="background-image:url('./Celulose/lpl2.jpg');"></div>
           <div class="card__content">
             <span class="kicker">Operações de Celulose</span>
             <h2 class="title">Bracell SP - Fábrica Linha 2</h2>
             <p class="desc">Lençóis Paulista - SP</p>
-            <span class="cta" role="link" aria-label="Abrir dashboard de Operações de Celulose">
+            <span class="cta" role="link" aria-label="Abrir dashboard de Bracell SP - Fábrica Linha 2">
               Abrir dashboard
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M13.172 12 8.222 7.05l1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/></svg>
             </span>
@@ -182,13 +182,13 @@
         </article>
 
         <!-- 2. Transporte de Pessoas -->
-        <article class="card" tabindex="0" data-link="/transporte-pessoas.html">
-          <div class="card__bg" style="background-image:url('https://images.unsplash.com/photo-1494516192674-b82b5f73a0f3?q=80&w=1600&auto=format&fit=crop');"></div>
+        <article class="card" tabindex="0" data-link="/terminalIntermodal.html">
+          <div class="card__bg" style="background-image:url('./Celulose/pdn2.jpg');"></div>
           <div class="card__content">
             <span class="kicker">Operações de Celulose</span>
             <h2 class="title">Bracell SP - Terminal Intermodal</h2>
             <p class="desc">Pederneiras - SP</p>
-            <span class="cta" role="link" aria-label="Abrir dashboard de Transporte de Pessoas">
+            <span class="cta" role="link" aria-label="Abrir dashboard de Bracell SP - Terminal Intermodal">
               Abrir dashboard
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M13.172 12 8.222 7.05l1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/></svg>
             </span>
@@ -196,13 +196,13 @@
         </article>
 
         <!-- 3. Terminais Retroportuários -->
-        <article class="card" tabindex="0" data-link="/terminais-retroportuarios.html">
-          <div class="card__bg" style="background-image:url('https://images.unsplash.com/photo-1501631957818-9f4b97a1a4d8?q=80&w=1600&auto=format&fit=crop');"></div>
+        <article class="card" tabindex="0" data-link="/santos.html">
+          <div class="card__bg" style="background-image:url('./Celulose/sts2.jpg');"></div>
           <div class="card__content">
             <span class="kicker">Operações de Celulose</span>
             <h2 class="title">Bracell SP - Terminal Portuário</h2>
             <p class="desc">Santos - SP</p>
-            <span class="cta" role="link" aria-label="Abrir dashboard de Terminais Retroportuários">
+            <span class="cta" role="link" aria-label="Abrir dashboard de Bracell SP - Terminal Portuário">
               Abrir dashboard
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M13.172 12 8.222 7.05l1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/></svg>
             </span>
@@ -210,13 +210,13 @@
         </article>
 
         <!-- 4. Operações de Armazém -->
-        <article class="card" tabindex="0" data-link="/operacoes-armazem.html">
-          <div class="card__bg" style="background-image:url('https://images.unsplash.com/photo-1586521995568-39c0605233d5?q=80&w=1600&auto=format&fit=crop');"></div>
+        <article class="card" tabindex="0" data-link="/eldorado.html">
+          <div class="card__bg" style="background-image:url('./Celulose/eld.jpg');"></div>
           <div class="card__content">
             <span class="kicker">Operações de Celulose</span>
             <h2 class="title">Eldorado Brasil</h2>
             <p class="desc">Itajaí - SC</p>
-            <span class="cta" role="link" aria-label="Abrir dashboard de Operações de Armazém">
+            <span class="cta" role="link" aria-label="Abrir dashboard de Eldorado Brasil">
               Abrir dashboard
               <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M13.172 12 8.222 7.05l1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"/></svg>
             </span>
