Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section class="carousel" aria-label="Menu principal dos tipos de negócio">
       <div class="track" id="track">
         <!-- 1. Operações de Celulose -->
-        <article class="card" tabindex="0" data-link="/fabricaLinha2.html">
+        <article class="card" tabindex="0" data-link="./painelFrota.html">
           <div class="card__bg" style="background-image:url('./Celulose/lpl2.jpg');"></div>
           <div class="card__content">
             <span class="kicker">Operações de Celulose</span>
