--- a/painelFrota.html
+++ b/painelFrota.html
@@ -242,8 +242,8 @@ function renderPanel(site){
     </div>
     <div class="subhead">
       <div class="chips">
-        ${chip(\`Disp.: \${counts.disp}\`,'dot-disp')}
-        ${chip(\`Manut.: \${counts.manut}\`,'dot-manu')}
+        ${chip(`Disp.: ${counts.disp}`,'dot-disp')}
+        ${chip(`Manut.: ${counts.manut}`,'dot-manu')}
       </div>
       <div class="legend">
         <span class="lg"><span class="sw sw-corr"></span> Corretiva</span>
